Add Loading Screen to App

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <title>DNG</title>
 </head>
 
-<svg viewBox="0 0 100 100" xmlns='http://www.w3.org/2000/svg' style="display:none;">
+<!-- <svg viewBox="0 0 100 100" xmlns='http://www.w3.org/2000/svg' style="display:none;">
   <filter id='noiseFilter'>
 
     <feTurbulence type='fractalNoise' baseFrequency='7.5 10' numOctaves='6' stitchTiles='stitch' />
   </filter>
-</svg>
+</svg> -->
 
 <body>
   <main>
