--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet"> -->
-  <title>DNG</title>
+  <title>Portfolio - Duy Khoi Nguyen</title>
 </head>
 
 <!-- <svg viewBox="0 0 100 100" xmlns='http://www.w3.org/2000/svg' style="display:none;">
